--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,11 +7,11 @@ readme = "README.md"
 
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = "^3.12"
 
 [tool.poetry.group.dev.dependencies]
-ipython = "^8.16.1"
 mypy = "^1.7.1"
+pytest = "^7.4.3"
 
 [build-system]
 requires = ["poetry-core"]
